--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>MassaMan0325</h1>
-</html>
 
+    
   <h2>About</h2>
     <p>
       MassaManです。chatgpt大好き人間。<br>
@@ -81,3 +81,5 @@
         <td>表彰、受賞歴、メディア掲載記事などあれば</td>
       </tr>
     </table>
+  </body>
+</html>
