--- a/Newindex.html
+++ b/Newindex.html
@@ -8,7 +8,7 @@
   </head>　
   <body>
     <h1>MassaMan0325</h1>
-
+    <img src="スクリーンショット 2024-11-21 19.20.34.png">
     
   <h2>About</h2>
     <p>
