--- a/Newindex.html
+++ b/Newindex.html
@@ -82,5 +82,8 @@
         <td>表彰、受賞歴、メディア掲載記事などあれば</td>
       </tr>
     </table>
-  </body>
+
+    <h3>Xタイムライン（試験用）</h3>
+     <a class="twitter-timeline" data-width="400" data-height="600" href="https://twitter.com/n_yobikou?ref_src=twsrc%5Etfw">Tweets by n_yobikou</a>
+     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  </body>
 </html>
